atualizando index.html

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://leonanthomaz-blog.vercel.app/" />
-    <meta property="og:title" content="Leonan Python Blog | Tutoriais e Dicas de Desenvolvimento" />
+    <meta property="og:title" content="Leonan Thomaz - Blog | Tutoriais e Dicas de Desenvolvimento" />
     <meta property="og:description" content="Blog técnico sobre Python, desenvolvimento e tecnologia. Tutoriais, dicas e experiências de um desenvolvedor Python." />
     <meta property="og:image" content="https://leonanthomaz-blog.vercel.app/src/assets/img/blog.png" />
-    <meta property="og:site_name" content="Leonan Python Blog" />
+    <meta property="og:site_name" content="Leonan Thomaz - Blog" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://leonanthomaz-blog.vercel.app/" />
-    <meta property="twitter:title" content="Leonan Python Blog | Tutoriais e Dicas de Desenvolvimento" />
+    <meta property="twitter:title" content="Leonan Thomaz - Blog | Tutoriais e Dicas de Desenvolvimento" />
     <meta property="twitter:description" content="Blog técnico sobre Python, desenvolvimento e tecnologia. Tutoriais, dicas e experiências de um desenvolvedor Python." />
     <meta property="twitter:image" content="https://leonanthomaz-blog.vercel.app/src/assets/img/blog.png" />
 
-    <title>Leonan Python Blog | Tutoriais e Dicas de Desenvolvimento</title>
+    <title>Leonan Thomaz - Blog | Tutoriais e Dicas de Desenvolvimento</title>
 
     <!-- Google Fonts com preconnect para melhor performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
