atualizando index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <!-- Favicon em múltiplos formatos para melhor compatibilidade -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/img/blog.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/img/blog.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/img/blog.png">
-    <link rel="shortcut icon" href="/src/assets/img/blog.png">
+    <!-- Favicon para aba do navegador -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/blog.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/blog.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/blog.png">
+    <link rel="shortcut icon" href="/assets/img/blog.png">
     
     <!-- Meta tags para SEO -->
     <meta name="description" content="Blog técnico sobre Python, desenvolvimento e tecnologia. Tutoriais, dicas e experiências de um desenvolvedor Python.">
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://leonanthomaz-blog.vercel.app/" />
     <meta property="og:title" content="Leonan Thomaz - Blog | Tutoriais e Dicas de Desenvolvimento" />
     <meta property="og:description" content="Blog técnico sobre Python, desenvolvimento e tecnologia. Tutoriais, dicas e experiências de um desenvolvedor Python." />
-    <meta property="og:image" content="https://leonanthomaz-blog.vercel.app/public/assets/img/foto-leonan.jpg" />
+    <meta property="og:image" content="https://leonanthomaz-blog.vercel.app/assets/img/foto-leonan.jpg" />
     <meta property="og:site_name" content="Leonan Thomaz - Blog" />
 
     <!-- Twitter -->
@@ -30,11 +30,11 @@
     <meta property="twitter:url" content="https://leonanthomaz-blog.vercel.app/" />
     <meta property="twitter:title" content="Leonan Thomaz - Blog | Tutoriais e Dicas de Desenvolvimento" />
     <meta property="twitter:description" content="Blog técnico sobre Python, desenvolvimento e tecnologia. Tutoriais, dicas e experiências de um desenvolvedor Python." />
-    <meta property="twitter:image" content="https://leonanthomaz-blog.vercel.app/public/assets/img/foto-leonan.jpg" />
+    <meta property="twitter:image" content="https://leonanthomaz-blog.vercel.app/assets/img/foto-leonan.jpg" />
 
     <title>Leonan Thomaz - Blog | Tutoriais e Dicas de Desenvolvimento</title>
 
-    <!-- Google Fonts com preconnect para melhor performance -->
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@300;400;500&display=swap" rel="stylesheet">
