--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Favicon para aba do navegador -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/blog.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/blog.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/blog.png">
-    <link rel="shortcut icon" href="/assets/img/blog.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="public/assets/img/blog.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="public/assets/img/blog.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="public/assets/img/blog.png">
+    <link rel="shortcut icon" href="public/assets/img/blog.png">
     
     <!-- Meta tags para SEO -->
     <meta name="description" content="Blog técnico sobre Python, desenvolvimento e tecnologia. Tutoriais, dicas e experiências de um desenvolvedor Python.">
